--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -26,3 +26,20 @@ body {
 #areaB {
     
 }
+ #wrapper{
+    width:200px;height:25px;
+    position:relative;
+    border:solid thin black;}
+/* Animated Bar */
+ #wrapper>div{
+    height:100%;
+    width: 10px;
+    background-color:green;
+    animation-name:loading;
+    animation: loading 5s infinite
+    }
+/* Animation */
+  @keyframes loading {
+    from { width: 0% }
+    to   { width: 100% }
+    }
