--- a/CSS/images.css
+++ b/CSS/images.css
@@ -14,9 +14,13 @@ img {
         max-height: 500px;
 	}
 }
-}  
+  
 
-.boxes{
+#boxes{
     width: 50px;
     border: 3px solid black;
+}
+
+#imgTest {
+        height: auto;
 }
