--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -19,10 +19,33 @@ body {
     grid-auto-rows: 150px;
 }
 
-#areaA {
-    
-}
+.bodyK {
+    background: hsl(197, 84%, 59%);
 
-#areaB {
-    
+}
+.overlay{
+    position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+.content-container{
+    text-align: center;
+    padding: 5px;
+}
+.imgKids{
+    display: inline-block;
+    max-width: 65%;
+}
+.content-Kids{
+    display: inline-block;
+    background-color: hsl(0, 0%, 95%);
+    border-radius: 3px;
+    padding: 1em;
+    margin-top: auto;
 }
